Fix some IntelliJ warnings